# Legendre-to-Chebyshev

./: LICENSE  README.md  environment.yml  l2cacc.yml  l2copenblas.yml  requirements.txt
.devcontainer/: devcontainer.json  setupenv.sh
.github/workflows/: l2c.yml
C/: leg2cheb.c  leg2cheb.h  meson.build
C/cython/: l2c.pxd  l2c.pyx  meson.build
C/tests/: meson.build  test.c
python/: Leg2Cheb.py
src/: build_meson.sh  meson.build
src/C/: dct.c  lambda.c  leg2cheb.c  leg2cheb.h  meson.build
src/ctypes/: l2ctypes.py  meson.build
src/cython/: l2c.pxd  l2c.pyx  meson.build
src/multiprec/C++/: L2Cprec.cpp  meson.build
src/multiprec/python/: L2Cprecision.py
src/python/: Leg2Cheb.py  binommat.py  compute_Lambda.py  meson.build
src/results/: figure3.py  figure4.sh  figure5.sh  table1.py
src/tests/: meson.build  test.c  test.py
src/timing/: latexerror.py  roundtrip.py  threadspeed.py  timing.py  timing.sh  timing_dct.sh  timing_direct.sh  timing_init.sh
